# Search-Proxy

./: .gitignore  Cargo.toml  Dockerfile  bin.js  config.example.toml  install.js  package.json
.github/workflows/: docker.yml  release.yml
deploy/: Caddyfile  search-proxy.service  search-proxy.toml.example
migrations/: 20260627000001_init.sql
src/: auth.rs  cli_admin.rs  config.rs  keypool.rs  main.rs  provider.rs  wrap.rs
src/server/: control.rs  mod.rs  proxy.rs  webui_api.rs  webui_static.rs
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/src/: App.vue  api.js
webui/src/components/: KeysPane.vue  StatusPane.vue  UsersPane.vue
