[package]
name = "search-proxy"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Multi-account key-rotation proxy for Firecrawl and Tavily CLI: mode A wrapper + mode B reverse proxy."

[[bin]]
name = "search-proxy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "process", "io-util", "net"] }
axum = { version = "0.8", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust-embed = "8"
mime_guess = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
